--- a/proyecto-final-programacion1/pom.xml
+++ b/proyecto-final-programacion1/pom.xml
@@ -21,6 +21,11 @@
         <version>5.10.0</version>
         <scope>test</scope>
     </dependency>
+  </dependency>
+  <dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-fxml</artifactId>
+    <version>21</version>
   </dependencies>
 
   <build>
@@ -35,6 +40,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
+
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.3.0</version>
